# hipacc

./: CMakeLists.txt
cmake/modules/: FindLLVM.cmake
compiler/: CMakeLists.txt  hipacc.cpp
doc/: Doxyfile_Backend
include/hipacc/Backend/: AcceleratorDeviceBase.h  AndroidBase.h  BackendConfigurationManager.h  BackendExceptions.h  CPU_x86.h  CUDA.h  ClangASTHelper.h  CodeGeneratorBaseImplT.h  CommonDefines.h  Filterscript.h  ICodeGenerator.h  InstructionSets.h  OpenCL_ACC.h  OpenCL_CPU.h  OpenCL_GPU.h  Renderscript.h  VectorizationAST.h  Vectorizer.h
include/hipacc/Config/: CompilerOptions.h  config.h.cmake
include/hipacc/DSL/: ClassRepresentation.h
include/hipacc/Rewrite/: Rewrite.h
lib/: CMakeLists.txt
lib/AST/: ASTTranslate.cpp  CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Backend/: BackendConfigurationManager.cpp  CMakeLists.txt  CPU_x86.cpp  CUDA.cpp  ClangASTHelper.cpp  Filterscript.cpp  InstructionSets.cpp  OpenCL_ACC.cpp  OpenCL_CPU.cpp  OpenCL_GPU.cpp  Renderscript.cpp  VectorizationAST.cpp  Vectorizer.cpp
lib/DSL/: CMakeLists.txt
lib/Device/: CMakeLists.txt
lib/Rewrite/: CMakeLists.txt  Rewrite.cpp
lib/Vectorization/: CMakeLists.txt
